--- a/index.html
+++ b/index.html
@@ -41,7 +41,41 @@
           <a href="#plans" class="btn btn-lg btn-success">Ver planes</a>
         </p>
       </section>
-      <section class="bg-black"></section>
+      <section class="bg-black p-4" id="desc">
+        <div class="row">
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="/img/note.png" alt="Generic placeholder image" width="140" height="140">
+            <h2>Reproduce tu música</h2>
+            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula
+              ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <p>
+              <a class="btn btn-success" href="#" role="button">Ver detalles »</a>
+            </p>
+          </div>
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="/img/phone.jpg" alt="Generic placeholder image" width="140" height="140">
+            <h2>LLevala donde quieras</h2>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis
+              consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <p>
+              <a class="btn btn-success" href="#" role="button">Ver detalles »</a>
+            </p>
+          </div>
+          <!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="/img/guitar.png" alt="Generic placeholder image" width="140" height="140">
+            <h2>Apoya a tus artistas</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis
+              euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa
+              justo sit amet risus.</p>
+            <p>
+              <a class="btn btn-success" href="#" role="button">Ver detalles »</a>
+            </p>
+          </div>
+          <!-- /.col-lg-4 -->
+        </div>
+      </section>
       <section class="bg-white"></section>
       <section class="bg-black"></section>
     </main>
