--- a/index.html
+++ b/index.html
@@ -76,13 +76,49 @@
           <!-- /.col-lg-4 -->
         </div>
       </section>
-      <section class="bg-white"></section>
+      <section class="bg-white" id="plans">
+        <div class="card-deck mb-3 text-center">
+          <div class="card mb-4">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Gratis</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">$0
+                <small class="text-muted">/ mes</small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>Reproducción aleatoria</li>
+                <li>Con anuncios</li>
+                <li>Saltos de canciones limitados</li>
+                <li>Conexion a internet necesaria</li>
+                <li>No Reproduce cualquier canción</li>
+                <li>Audio de calidad media</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-outline-success">Crear una cuenta</button>
+            </div>
+          </div>
+          <div class="card mb-4">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Premium</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">$ 14.900
+                <small class="text-muted">/ mes</small>
+              </h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>Haz click en el botón y descubre las ventajas de ser premium</li>
+              </ul>
+              <a href="/premium.html" class="btn btn-lg btn-block btn-success">Ver ventajas</a>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="bg-black"></section>
     </main>
 
     <footer class="mastfoot mt-auto">
       <div class="inner">
-        <p>Spotify &reg;;</div>
+        <p>Spotify &reg;</div>
     </footer>
   </div>
 
