Terminado sección de albumes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <!-- /.col-lg-4 -->
         </div>
       </section>
-      <section class="bg-white" id="plans">
+      <section class="bg-white p-4" id="plans">
         <div class="card-deck mb-3 text-center">
           <div class="card mb-4">
             <div class="card-header">
@@ -113,7 +113,10 @@
           </div>
         </div>
       </section>
-      <section class="bg-black"></section>
+      <section class="bg-black p-4">
+        <h2>Todo tu música en todo lugar</h2>
+        <img src="/img/albums.png" alt="Albumes">
+      </section>
     </main>
 
     <footer class="mastfoot mt-auto">
