FIX: responsive imagen de albumes

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </section>
       <section class="bg-black p-4">
         <h2>Todo tu música en todo lugar</h2>
-        <img src="/img/albums.png" alt="Albumes">
+        <img src="/img/albums.png" class="img-fluid" alt="Albumes">
       </section>
     </main>
 
