--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <title>Cover Template for Bootstrap</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="/css/free.css" rel="stylesheet">
+  <link href="css/free.css" rel="stylesheet">
 </head>
 
 <body class="text-center">
