--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section class="bg-black p-4" id="desc">
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/img/note.png" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="img/note.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Reproduce tu música</h2>
             <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula
               ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
@@ -64,7 +64,7 @@
           </div>
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/img/guitar.png" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="img/guitar.png" alt="Generic placeholder image" width="140" height="140">
             <h2>Apoya a tus artistas</h2>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis
               euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa
@@ -108,14 +108,14 @@
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Haz click en el botón y descubre las ventajas de ser premium</li>
               </ul>
-              <a href="/premium.html" class="btn btn-lg btn-block btn-success">Ver ventajas</a>
+              <a href="premium.html" class="btn btn-lg btn-block btn-success">Ver ventajas</a>
             </div>
           </div>
         </div>
       </section>
       <section class="bg-black p-4">
         <h2>Todo tu música en todo lugar</h2>
-        <img src="/img/albums.png" class="img-fluid" alt="Albumes">
+        <img src="img/albums.png" class="img-fluid" alt="Albumes">
       </section>
     </main>
 
