--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="/img/phone.jpg" alt="Generic placeholder image" width="140" height="140">
+            <img class="rounded-circle" src="img/phone.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>LLevala donde quieras</h2>
             <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis
               consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
