--- a/premium.html
+++ b/premium.html
@@ -10,10 +10,10 @@
   <title> Crear cuenta premium </title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="/css/free.css" rel="stylesheet">
+  <link href="css/free.css" rel="stylesheet">
 
   <style>
     .cards {
